# linkodin

./: .env.example  .gitignore  CHANGELOG.md  DEMO.md  LICENSE  README.md  RELEASE.md  demo.py  pyproject.toml  pytest.ini  quick_test.py  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-executables.yml  release.yml  test.yml
scripts/: build.sh  release.py
src/cli/: __init__.py  main.py
src/entities/: __init__.py  persona.py  post.py
src/infrastructure/: __init__.py  file_persona_repository.py  file_post_repository.py  in_memory_persona_repository.py  in_memory_post_repository.py  mock_ai_service.py  openai_service.py
src/interactors/: __init__.py  interfaces.py  persona_interactor.py  post_generation_interactor.py
tests/: __init__.py  conftest.py  test_encoding.py  test_entities.py  test_interactors.py  test_openai_service.py  test_repositories.py
